--- a/_TrashCan_0203/.project
+++ b/_TrashCan_0203/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>_TrashCAN</name>
+	<name>_TrashCan_0203</name>
 	<comment></comment>
 	<projects>
 	</projects>
